[gd_scene load_steps=9 format=2]

[ext_resource path="res://ArenaEditor/ArenaEditor.gd" type="Script" id=1]
[ext_resource path="res://Objects/HexRegion/HexRegion.tscn" type="PackedScene" id=2]
[ext_resource path="res://ArenaEditor/HexGridOverlay.gd" type="Script" id=3]
[ext_resource path="res://Objects/GimbleCamera/GimbleCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/RadialMenu/RadialMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/RadialButton/RadialButton.tscn" type="PackedScene" id=6]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0, 0, 0, 1 )
sky_horizon_color = Color( 0.513726, 0.313726, 0, 1 )
sky_curve = 0.00979366
sky_energy = 10.0
ground_bottom_color = Color( 0, 0, 0, 1 )
ground_horizon_color = Color( 1, 0.462745, 0, 1 )
sun_color = Color( 0.486275, 0.470588, 0.25098, 1 )
sun_curve = 0.0210224

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
ambient_light_color = Color( 0.54902, 0.54902, 0.54902, 1 )
ambient_light_sky_contribution = 0.5
tonemap_mode = 2

[node name="ArenaEditor" type="Spatial"]
script = ExtResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.767434, 0.641128, 0, -0.641128, -0.767434, 0, 2, 0 )
light_color = Color( 0.819608, 0.701961, 0.513726, 1 )
light_energy = 0.2
light_size = 2.0
shadow_enabled = true
directional_shadow_normal_bias = 2.883

[node name="GimbleCamera" parent="." instance=ExtResource( 4 )]
free_look = true
current = true
orbit_dps = 180.0
zoom_step = 0.02
pitch_degree_max = -10.0
initial_pitch_degree = -45.0
sensitivity = Vector2( 0.02, 0.02 )

[node name="HexRegion" parent="." instance=ExtResource( 2 )]

[node name="HexGridOverlay" type="Spatial" parent="."]
script = ExtResource( 3 )
radius = 20
hex_size = 10.0
target_path = NodePath("../GimbleCamera")

[node name="Base" type="MeshInstance" parent="HexGridOverlay"]
skeleton = NodePath("../..")

[node name="Cursor" type="MeshInstance" parent="HexGridOverlay"]
skeleton = NodePath("../..")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 100

[node name="RadialMenu" parent="UI" instance=ExtResource( 5 )]
visible = true
margin_right = 500.0
margin_bottom = 500.0
focus_mode = 2
outer_radius = 250.0
inner_radius = 100.0
gap_degrees = 2.0

[node name="RadialButton" parent="UI/RadialMenu" instance=ExtResource( 6 )]
margin_right = 500.0
margin_bottom = 500.0
focus_neighbour_left = NodePath("../RadialButton3")
focus_neighbour_top = NodePath("../RadialButton3")
focus_neighbour_right = NodePath("../RadialButton2")
focus_neighbour_bottom = NodePath("../RadialButton2")
focus_next = NodePath("../RadialButton2")
focus_previous = NodePath("../RadialButton3")
mouse_filter = 2
start_degree = 1.0
end_degree = 119.0
outer_radius = 250.0
inner_radius = 100.0

[node name="RadialButton2" parent="UI/RadialMenu" instance=ExtResource( 6 )]
margin_right = 500.0
margin_bottom = 500.0
focus_neighbour_left = NodePath("../RadialButton")
focus_neighbour_top = NodePath("../RadialButton")
focus_neighbour_right = NodePath("../RadialButton3")
focus_neighbour_bottom = NodePath("../RadialButton3")
focus_next = NodePath("../RadialButton3")
focus_previous = NodePath("../RadialButton")
mouse_filter = 2
start_degree = 121.0
end_degree = 239.0
outer_radius = 250.0
inner_radius = 100.0

[node name="RadialButton3" parent="UI/RadialMenu" instance=ExtResource( 6 )]
margin_right = 500.0
margin_bottom = 500.0
focus_neighbour_left = NodePath("../RadialButton2")
focus_neighbour_top = NodePath("../RadialButton2")
focus_neighbour_right = NodePath("../RadialButton")
focus_neighbour_bottom = NodePath("../RadialButton")
focus_next = NodePath("../RadialButton")
focus_previous = NodePath("../RadialButton2")
mouse_filter = 2
start_degree = 241.0
end_degree = 359.0
outer_radius = 250.0
inner_radius = 100.0
